--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,14 +2,15 @@
 
 <div *ngFor="let product of products">
   <h3>
-    <a [title]="product.name + ' details'">
+    <a
+      [title]="product.name + ' details'"
+      [routerLink]="['/products', product.id]"
+    >
       {{ product.name }}
     </a>
     <p *ngIf="product.description">Description: {{ product.description }}</p>
     <button type="button" (click)="share()">Share</button>
-    <app-product-alerts 
-      [product]="product" 
-      (notify)="onNotify()">
+    <app-product-alerts [product]="product" (notify)="onNotify()">
     </app-product-alerts>
   </h3>
 </div>
